# staking-near

./: Cargo.toml  build.sh
res/: cross_contract_high_level.wasm  staking_near.wasm
src/: lib.rs  nft_callbacks.rs
staking-ui/: package-lock.json  package.json
staking-ui/public/: index.html
staking-ui/src/: App.css  App.js  index.js
staking-ui/src/lib/: config.js  contract.js  near.js  utils.js
staking-ui/src/pages/: CreateToken.js  FetchingData.js
staking-ui/src/utils/: config.js  contract.js  near.js  sendToken-node.js  sendToken.js
tests/: general.rs
